--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "nuxt": "2.12.2",
-    "reqlim": "^0.0.0"
+    "reqlim": "^0.0.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^2.0.0"
